<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_translucent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="-24dp"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/tagline_1"
            android:textAllCaps="false"
            android:textColor="@color/gold"
            android:textSize="22dp"
            android:textStyle="italic"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:fontFamily="@font/playfair_display"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/tagline_2"
            android:textAllCaps="false"
            android:textColor="@color/light_gray"
            android:textSize="22dp"
            android:textStyle="italic"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="@color/black_translucent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/follow"
                android:textAllCaps="true"
                android:textAppearance="@style/HurmeGeometricSansTextAppearance"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/facebook"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:clickable="true"
                android:contentDescription="@string/facebook"
                android:focusable="true"
                android:padding="@dimen/dimen_12dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_facebook"
                app:tint="@color/light_gray" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/instagram"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:clickable="true"
                android:contentDescription="@string/instagram"
                android:focusable="true"
                android:padding="@dimen/dimen_10dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_instagram"
                app:tint="@color/light_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>