<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/gradient_bg"
        android:drawableStart="@drawable/ic_language"
        android:drawablePadding="@dimen/dimen_12dp"
        android:drawableTint="@color/gold"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_12dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_12dp"
        android:paddingBottom="@dimen/dimen_8dp"
        android:text="@string/change_language"
        android:textColor="@color/gold"
        android:textSize="@dimen/text_size_xl"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/lang_en"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTint="@color/gold"
                android:gravity="center"
                android:text="@string/english"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_english" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/lang_hi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTint="@color/gold"
                android:gravity="center"
                android:text="@string/hindi"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_hindi" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:background="@drawable/gradient_bg"
        android:drawableStart="@drawable/ic_theme"
        android:drawablePadding="@dimen/dimen_12dp"
        android:drawableTint="@color/gold"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_12dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_12dp"
        android:paddingBottom="@dimen/dimen_8dp"
        android:text="@string/change_app_theme"
        android:textColor="@color/gold"
        android:textSize="@dimen/text_size_xl"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/theme_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTint="@color/gold"
                android:gravity="center"
                android:text="@string/light"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_light_theme" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/theme_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTint="@color/gold"
                android:gravity="center"
                android:text="@string/dark"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_dark" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/theme_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimen_8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTint="@color/gold"
                android:gravity="center"
                android:text="@string/follow_system"
                android:textSize="@dimen/text_size_m"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_theme" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>