<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TextActivity">


    <include layout="@layout/layout_toolbar" />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_12dp"
                android:text="@string/get_support_over" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dimen_16dp"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="@dimen/dimen_4dp"
                    app:cardElevation="@dimen/dimen_4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/dimen_8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:drawableTint="@color/gold"
                        android:gravity="center"
                        android:text="@string/call"
                        android:textSize="@dimen/text_size_m"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/ic_call_24dp" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/whatsapp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="@dimen/dimen_4dp"
                    app:cardElevation="@dimen/dimen_4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/dimen_8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:gravity="center"
                        android:text="@string/whatsapp"
                        android:textSize="@dimen/text_size_m"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/ic_whatsapp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="@dimen/dimen_4dp"
                    app:cardElevation="@dimen/dimen_4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/dimen_8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dimen_8dp"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textSize="@dimen/text_size_m"
                        android:textStyle="bold"
                        app:drawableTint="@color/color_blue"
                        app:drawableTopCompat="@drawable/ic_email" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>

        <include layout="@layout/layout_progress_bar" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>